tests/annotate_exports_no_import_on_error/main-1.js
// @flow

import { foo } from "./lib-1";

module.exports = foo(); // error: C is not exported
